--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,18 @@
-language: objective-c
-osx_image: xcode7.2
-env:
-  global:
-    - CONFIG=opt
-    - TEST=objc
-    - JOBS=1
+sudo: false
+language: python
+python:
+  - '2.7'
+  - '3.5'
+  - 'pypy'
 before_install:
-  - brew install gflags
-  # Pod install does this too, but we don't want the output.
-  - pod repo update --silent
+  - git submodule update --init
 install:
-  - make grpc_objective_c_plugin
-  - pushd src/objective-c/tests
-  # Needs to be verbose, or otherwise OpenSSL's prepare_command makes Travis
-  # time out:
-  - pod install --verbose
-  - popd
-before_script:
-  - make interop_server
-  - bins/$CONFIG/interop_server --port=5050 &
-  - bins/$CONFIG/interop_server --port=5051 --use_tls &
-xcode_workspace: src/objective-c/tests/Tests.xcworkspace
-xcode_scheme:
-  - RxLibraryUnitTests
-  - InteropTestsLocalSSL
-  - InteropTestsLocalCleartext
-  # TODO(jcanizales): Investigate why they time out:
-  # - InteropTestsRemote
-xcode_sdk: iphonesimulator9.2
+  - pip install tox
+script:
+  - tools/run_tests/run_tests.py -l python --travis
 notifications:
-  email: false
+  email:
+    recipients:
+      - vcamx3@gmail.com
+    on_success: always
+    on_failure: always
